// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withContainer adds div 1`] = `
<bound 
  className="blah"
  requiredProp="Jack"
>
  <bound 
    requiredProp="Jack"
  >
    <div
      className="blah"
    >
      <p>
        I received 
        Jack
        !
      </p>
    </div>
  </bound >
</bound >
`;

exports[`withContainer doesnt add div on null render 1`] = `
<bound 
  className="blah"
>
  <bound  />
</bound >
`;

exports[`withContainer executes alternative on null render 1`] = `
<bound 
  ifNull={[Function]}
>
  <bound >
    <p>
      TestComponent was null!
    </p>
  </bound >
</bound >
`;
